# msatools

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
_setup_scripts/: README.md  init.sh  setup1_rename_project.sh  setup2_create_environment.sh
data/: README.md
docs/: MSA_instructions.md  README.md  troubleshooting.md
docs/.claude_sessions/: 2026-03-27_template_modernization.md
logs/: README.md
notebooks/: README.md
outputs/: README.md
scripts/: README.md
src/myproject/: __main__.py  core.py  helpers.py  main.py
tests/: conftest.py  test_core.py
